[package]
name = "libdncs"
version = "0.1.3"
edition = "2021"

[dependencies]
lbfgs = "0.2.1"
nalgebra = "0.32.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
regex = "1.10.5"


[[bin]]
name = "dncs"
path = "src/main.rs"
