[package]
name = "libdncs"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = "4.5.20"
lbfgs = "0.2.1"
liblbfgs = "0.1.0"
nalgebra = "0.32.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
toml = "0.8.19"


[dev-dependencies]
regex = "1.10.5"


[[bin]]
name = "dncs"
path = "src/main.rs"
