[package]
name = "libdncs"
version = "1.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
liblbfgs = "0.1.0"
nalgebra = "0.32.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
toml = "0.8.19"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"


[dev-dependencies]
regex = "1.10.5"


[[bin]]
name = "dncs"
path = "src/main.rs"

[workspace]
members = ["python"]
